[project]
name = "treeflows"
version = "0.0.8"
authors = [
 { name="Moshe Jasper", email="mjasper@student.unimelb.edu.au" },
]
description = "repository for functions for preparing and working with tree sequences"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy>= 2.1",
    "pandas",
    "cyvcf2",
    "pyfaidx",
    "dendropy", 
    "tskit", 
    "tsinfer@git+https://github.com/tskit-dev/tsinfer@0.5.0", 
    "tsdate@git+https://github.com/tskit-dev/tsdate@0.2.5", 
    "bio2zarr@git+https://github.com/sgkit-dev/bio2zarr@0.1.7", 
    "tscompare@git+https://github.com/tskit-dev/tscompare@0.2", 
    "svglib",
    "reportlab", 
]

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"
